<resources>
    <string name="app_name">Recipy</string>
    <string name="action_chart">Chart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="recipe_list_fragment_label">Recipe List Fragment</string>
    <string name="edit_recipe_fragment_label">Edit Recipe Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="required_time">Required time</string>
    <string name="etNameHint">Name</string>
    <string name="etTimeHint">Time</string>
    <string name="etAuthorHint">Author</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe">Recipe</string>
    <string name="etDescriptionHint">Recipe</string>

    <string-array name="categories">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
    </string-array>

    <string name="minutes">%d minutes</string>
    <string name="noRecipeChartText">There are no recipes in database :(</string>
    <string name="rating">Rating</string>

</resources>